--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-react": "^7.26.3",
     "babel-loader": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
